--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,72 @@
 .header {
-  padding: 20px 0;
+  padding-top: 26px;
+  padding-bottom: 28px;
 }
 
-.nav-list {
+.header_container {
   display: flex;
+ justify-content: right;
+  gap: 75px;
+}
+.logo {
+  display: none;
+}
+.navigation_header {
+  display: none;
+}
+
+.header_img {
+  display: none;
+}
+.header_name {
+  font-family: "Paprika", sans-serif;
+font-size: 20px;
+color: #0d0d0d;
+
+}
+@media only screen and (min-width: 1280px) {
+   .header {
+    background: #2f2f2f;
+    padding: 0;
+}
+
+.header_container {
+  justify-content: unset;
+  gap: unset;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+}
+.logo {
+  display: block;
+  font-family: "Homemade Apple", sans-serif;
+margin-right: auto;
+font-size: 36px;
+text-align: center;
+color: #fff;
+
+}
+.navigation_header {
+  display: flex;
+}
+.nav_list {
+  display: flex;
+  gap: 24px;
+  margin-right: 36px;
+}
+.nav_link {
+  display: block;
+  padding: 27px 0;
+  color: #fff;
+}
+.header_img {
+  display: block;
+}
+.header_name {
+  display: none;
+}
+.header_link {
+  display: none;
 }
 
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+    
+  
 }
