--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,11 @@
     <a href="" class="logo">Yes</a>
     <nav class="navigation_header">
       <ul class="nav_list">
-        <li><a href="" class="nav_link">Inspiration</a></li>
+        <li>
+          <button data-modal-open type="button" class="nav_button">
+            Inspiration
+          </button>
+        </li>
         <li><a href="" class="nav_link">Fotografi</a></li>
         <li><a href="" class="nav_link">Beklædning</a></li>
         <li><a href="" class="nav_link">Lokation</a></li>
@@ -25,5 +29,20 @@
         <use href="./img/icons.svg#icon-Group-6"></use>
       </svg>
     </a>
+  </div>
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <button data-modal-close type="button" class="modal-close">
+        <svg width="14" height="14">
+          <use href="./img/icons.svg#icon-Group-176"></use>
+        </svg>
+      </button>
+      <ul class="modal-list">
+        <li>Stil</li>
+        <li>Moodboard</li>
+        <li>Fotografi</li>
+        <li>Video</li>
+      </ul>
+    </div>
   </div>
 </header>
